--- a/res/layout/cash_payment_details_page.xml
+++ b/res/layout/cash_payment_details_page.xml
@@ -5,7 +5,7 @@
         android:orientation="horizontal"
         android:weightSum="4"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent" android:padding="5dp">
     <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
