--- a/res/layout/unproductive_call_page.xml
+++ b/res/layout/unproductive_call_page.xml
@@ -3,21 +3,16 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
               android:layout_width="match_parent"
-              android:layout_height="match_parent">
+              android:layout_height="match_parent" android:padding="5dp">
 
-    <LinearLayout
-            android:orientation="vertical"
+    <Button
             android:layout_width="fill_parent"
-            android:layout_height="fill_parent" android:layout_margin="5dp">
-        <Button
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:text="Make UnProductive Call"
-                android:id="@+id/btnMakeUnProductiveCall" android:layout_margin="5dp" android:textSize="25dp"/>
-        <Button
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:text="View UnProductive Call"
-                android:id="@+id/btnViewUnProductiveCall" android:layout_margin="5dp" android:textSize="25dp"/>
-    </LinearLayout>
+            android:layout_height="wrap_content"
+            android:text="Make UnProductive Call"
+            android:id="@+id/btnMakeUnProductiveCall" android:textSize="25dp"/>
+    <Button
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:text="View UnProductive Call"
+            android:id="@+id/btnViewUnProductiveCall" android:textSize="25dp"/>
 </LinearLayout>
