--- a/res/layout/view_direct_order_page.xml
+++ b/res/layout/view_direct_order_page.xml
@@ -3,163 +3,146 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
               android:layout_width="match_parent"
-              android:layout_height="match_parent">
+              android:layout_height="match_parent" android:padding="5dp">
+    <TextView
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="Direct Sales Order"
+            android:textSize="30dp"
+            android:focusableInTouchMode="true"
+            android:gravity="center_horizontal"/>
+    <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:weightSum="10">
+        <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:text="Outlet"
+                android:textSize="25dp" android:layout_weight="3"/>
+        <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:id="@+id/txtViewDirectOutletName"
+                android:textSize="25dp" android:layout_weight="7"/>
+    </LinearLayout>
+    <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:weightSum="10">
+        <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:text="Vehicle"
+                android:textSize="25dp" android:layout_weight="3"/>
+        <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:id="@+id/txtViewDirectVehicleNo"
+                android:textSize="25dp" android:layout_weight="7"/>
+    </LinearLayout>
+    <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:weightSum="10">
+        <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:text="Driver"
+                android:textSize="25dp" android:layout_weight="3"/>
+        <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:id="@+id/txtViewDirectDriverName"
+                android:textSize="25dp" android:layout_weight="7"/>
+    </LinearLayout>
+    <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:weightSum="10">
+        <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:text="Driver NIC"
+                android:textSize="25dp" android:layout_weight="3"/>
+        <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:id="@+id/txtViewDirectDriverNIC" android:textSize="25dp"
+                android:layout_weight="7"/>
+    </LinearLayout>
+    <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:weightSum="10">
+        <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:text="Delivery Date" android:textSize="25dp"
+                android:layout_weight="3"/>
+        <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:id="@+id/txtViewDirectDeliveryDate" android:textSize="25dp"
+                android:layout_weight="7"/>
+    </LinearLayout>
+    <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:weightSum="10">
+        <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:text="Remarks" android:textSize="25dp"
+                android:layout_weight="3"/>
+        <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:id="@+id/txtViewDirectRemarks" android:textSize="25dp"
+                android:layout_weight="7"/>
+    </LinearLayout>
     <LinearLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="5dp">
+            android:weightSum="10">
         <TextView
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:text="Direct Sales Order"
-                android:layout_margin="5dp"
-                android:textSize="30dp"
-                android:focusableInTouchMode="true"
-                android:gravity="center_horizontal"/>
-        <LinearLayout
-                android:orientation="horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="5dp" android:weightSum="100">
-            <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:text="Outlet"
-                    android:layout_margin="5dp"
-                    android:textSize="25dp" android:layout_weight="70"/>
-            <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/txtViewDirectOutletName"
-                    android:layout_margin="5dp"
-                    android:textSize="25dp" android:layout_weight="30"/>
-        </LinearLayout>
-        <LinearLayout
-                android:orientation="horizontal"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="5dp" android:weightSum="100">
-            <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:text="Vehicle"
-                    android:layout_margin="5dp"
-                    android:textSize="25dp" android:layout_weight="70"/>
-            <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/txtViewDirectVehicleNo"
-                    android:layout_margin="5dp"
-                    android:textSize="25dp" android:layout_weight="30"/>
-        </LinearLayout>
-        <LinearLayout
-                android:orientation="horizontal"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="5dp" android:weightSum="100">
-            <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:text="Driver"
-                    android:layout_margin="5dp"
-                    android:textSize="25dp" android:layout_weight="70"/>
-            <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/txtViewDirectDriverName"
-                    android:layout_margin="5dp"
-                    android:textSize="25dp" android:layout_weight="30"/>
-        </LinearLayout>
-        <LinearLayout
-                android:orientation="horizontal"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="5dp" android:weightSum="100">
-            <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:text="Driver NIC"
-                    android:layout_margin="5dp"
-                    android:textSize="25dp" android:layout_weight="70"/>
-            <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/txtViewDirectDriverNIC" android:layout_margin="5dp" android:textSize="25dp"
-                    android:layout_weight="30"/>
-        </LinearLayout>
-        <LinearLayout
-                android:orientation="horizontal"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="5dp" android:weightSum="100">
-            <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:text="Delivery Date" android:layout_margin="5dp" android:textSize="25dp"
-                    android:layout_weight="70"/>
-            <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/txtViewDirectDeliveryDate" android:layout_margin="5dp" android:textSize="25dp"
-                    android:layout_weight="30"/>
-        </LinearLayout>
-        <LinearLayout
-                android:orientation="horizontal"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="5dp" android:weightSum="100">
-            <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:text="Remarks" android:layout_margin="5dp" android:textSize="25dp"
-                    android:layout_weight="70"/>
-            <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/txtViewDirectRemarks" android:layout_margin="5dp" android:textSize="25dp"
-                    android:layout_weight="30"/>
-        </LinearLayout>
-        <LinearLayout
-                android:orientation="vertical"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="5dp">
-            <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Ordered Items"
-                    android:textColor="@android:color/white"
-                    android:background="#4F82B4"
-                    android:gravity="center"
-                    android:layout_margin="5dp"
-                    android:textSize="25dp"
-                    android:layout_weight="30"/>
-        </LinearLayout>
-        <ListView
-                android:layout_width="match_parent"
-                android:layout_weight="1"
-                android:layout_margin="5dp"
-                android:id="@+id/directOrderDetailListView"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
-                android:layout_height="match_parent">
-        </ListView>
-        <Button
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:text="Sync"
-                android:layout_alignParentBottom="true"
-                android:layout_margin="5dp"
+                android:text="Ordered Items"
+                android:textColor="@android:color/white"
+                android:background="#4F82B4"
+                android:gravity="center"
                 android:textSize="25dp"
-                android:id="@+id/btnDirectSync"
-                android:layout_gravity="center_horizontal"/>
+                android:layout_weight="30"/>
     </LinearLayout>
+    <ListView
+            android:layout_width="match_parent"
+            android:layout_weight="1"
+            android:id="@+id/directOrderDetailListView"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_height="match_parent">
+    </ListView>
+    <Button
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:text="Sync"
+            android:layout_alignParentBottom="true"
+            android:textSize="25dp"
+            android:id="@+id/btnDirectSync"
+            android:layout_gravity="center_horizontal"/>
 </LinearLayout>
